test-output.txt
D:\SWD_NJ\backend\src\utils\jwt.ts:2
import jwt, { SignOptions } from "jsonwebtoken";
              ^
SyntaxError: The requested module 'jsonwebtoken' does not provide an export named 'SignOptions'
    at #asyncInstantiate (node:internal/modules/esm/module_job:319:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:422:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:661:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.13.1
